<resources>
    <string name="app_name">Popular Movies Kotlin</string>
    <string name="action_settings">Settings</string>
    <string name="release_here">Release here</string>
    <string name="title_here">Title here</string>
    <string name="rating_here">rating here</string>
    <string name="overview">Overview</string>
    <string name="description_here">description here</string>
    <string name="the_most_populair_movies_of">The most populair movies of</string>
    <string name="submit">Submit</string>
</resources>
